--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Увертюра Иордан — Психоделическая Вселенная</title>
+    <title>Увертюра Иордан — Кислотный Трип</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Orbitron:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- ФОНЫ -->
-<canvas id="waves"></canvas>
-<canvas id="smoke"></canvas>
+<!-- WebGL фоновый канвас -->
+<canvas id="acid"></canvas>
 
-<!-- НАВИГАЦИЯ -->
-<nav id="main-nav">
+<!-- Легкий дым -->
+<div class="smoke-layer"></div>
+
+<!-- Навигация -->
+<nav id="nav">
     <ul>
         <li><a href="#home">Главная</a></li>
         <li><a href="#albums">Альбомы</a></li>
@@ -23,115 +25,145 @@
     </ul>
 </nav>
 
-<!-- ГЛАВНАЯ -->
-<section id="home" class="section home-section">
+<!-- Главная секция -->
+<section id="home" class="section home">
     <h1 class="title glitch">Увертюра Иордан</h1>
-    <p class="tagline">Психоделический рок / регги</p>
-    <button class="btn-enter" onclick="document.getElementById('albums').scrollIntoView({behavior:'smooth'})">
-        Войти в мир
+    <p class="tag">Психоделический рок / регги</p>
+
+    <button class="enter" onclick="document.getElementById('albums').scrollIntoView({behavior:'smooth'})">
+        Войти в Трип
     </button>
 </section>
 
-<!-- АЛЬБОМЫ -->
+<!-- Альбомы -->
 <section id="albums" class="section">
-    <h2 class="section-title">Альбомы</h2>
+    <h2 class="sec-title">Альбомы</h2>
 
     <div class="album-grid">
         <div class="album-card">
-            <img src="albums/album1.jpg" alt="">
+            <img src="albums/album1.jpg">
             <h3>ПсихоСфера</h3>
             <audio controls>
-                <source src="albums/album1/track1.mp3" type="audio/mpeg">
+                <source src="albums/album1/track1.mp3">
             </audio>
         </div>
 
         <div class="album-card">
-            <img src="albums/album2.jpg" alt="">
+            <img src="albums/album2.jpg">
             <h3>РеггиГалактика</h3>
             <audio controls>
-                <source src="albums/album2/track1.mp3" type="audio/mpeg">
+                <source src="albums/album2/track1.mp3">
             </audio>
         </div>
     </div>
 </section>
 
-<!-- ГАЛЕРЕЯ -->
+<!-- Галерея -->
 <section id="gallery" class="section">
-    <h2 class="section-title">Галерея</h2>
+    <h2 class="sec-title">Галерея</h2>
+
     <div class="gallery-grid">
-        <img src="gallery/img1.jpg" class="gallery-img">
-        <img src="gallery/img2.jpg" class="gallery-img">
-        <img src="gallery/img3.jpg" class="gallery-img">
+        <img src="gallery/img1.jpg" class="gal-img">
+        <img src="gallery/img2.jpg" class="gal-img">
+        <img src="gallery/img3.jpg" class="gal-img">
     </div>
 </section>
 
-<!-- ВСЯ АНИМАЦИЯ ВСТРОЕНА -->
+<!-- 🔥 КИСЛОТНЫЙ WEBGL — ВСТРОЕН В HTML -->
 <script>
-/* ---------- CANVAS SIZE ---------- */
-function resizeCanvas(c) {
-    c.width = document.documentElement.scrollWidth;
-    c.height = document.documentElement.scrollHeight;
+const canvas = document.getElementById("acid");
+const gl = canvas.getContext("webgl");
+let then = 0;
+
+function resize() {
+    canvas.width = document.documentElement.scrollWidth;
+    canvas.height = document.documentElement.scrollHeight;
+    gl.viewport(0, 0, canvas.width, canvas.height);
+}
+resize();
+window.addEventListener("resize", resize);
+
+/* --- Шейдеры (WebGL Acid Plasma) --- */
+const vertex = `
+attribute vec2 position;
+void main() {
+    gl_Position = vec4(position, 0.0, 1.0);
+}`;
+    
+const fragment = `
+precision highp float;
+uniform float time;
+uniform vec2 resolution;
+
+void main() {
+    vec2 uv = gl_FragCoord.xy / resolution.xy;
+    uv -= 0.5;
+    uv.x *= resolution.x/resolution.y;
+
+    float r = length(uv);
+    float a = atan(uv.y, uv.x);
+
+    float f = sin(a*3.0 + time*0.7)
+            + cos(r*12.0 - time*1.5)
+            + sin((uv.x+uv.y)*10.0 - time*1.2);
+
+    float c = sin(f + time*0.5);
+
+    gl_FragColor = vec4(
+        0.6 + 0.4*sin(c*3.0 + time),
+        0.6 + 0.4*sin(c*5.0 + time*0.5),
+        0.6 + 0.4*sin(c*7.0 + time*2.0),
+        1.0);
+}`;
+
+/* --- Компиляция --- */
+function compile(type, src) {
+    const s = gl.createShader(type);
+    gl.shaderSource(s, src);
+    gl.compileShader(s);
+    return s;
 }
 
-const waves = document.getElementById("waves");
-const smoke = document.getElementById("smoke");
+const vs = compile(gl.VERTEX_SHADER, vertex);
+const fs = compile(gl.FRAGMENT_SHADER, fragment);
+const prog = gl.createProgram();
 
-resizeCanvas(waves);
-resizeCanvas(smoke);
+gl.attachShader(prog, vs);
+gl.attachShader(prog, fs);
+gl.linkProgram(prog);
+gl.useProgram(prog);
 
-window.addEventListener("resize", () => {
-    resizeCanvas(waves);
-    resizeCanvas(smoke);
-});
+const buf = gl.createBuffer();
+gl.bindBuffer(gl.ARRAY_BUFFER, buf);
+gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
+    -1,-1, 1,-1, -1,1, 1,1
+]), gl.STATIC_DRAW);
 
-/* ---------- ПСИХОДЕЛИЧЕСКИЕ ВОЛНЫ ---------- */
-const wctx = waves.getContext("2d");
-let t = 0;
+const pos = gl.getAttribLocation(prog, "position");
+gl.enableVertexAttribArray(pos);
+gl.vertexAttribPointer(pos, 2, gl.FLOAT, false, 0, 0);
 
-function drawWaves() {
-    wctx.clearRect(0,0,waves.width,waves.height);
+const timeUL = gl.getUniformLocation(prog, "time");
+const resUL = gl.getUniformLocation(prog, "resolution");
 
-    for (let y = 0; y < waves.height; y += 40) {
-        for (let x = 0; x < waves.width; x += 40) {
-            let dx = Math.sin((x+t)*0.01) * 20;
-            let dy = Math.cos((y+t)*0.01) * 20;
-            wctx.fillStyle = `hsl(${(x+y+t)/10 % 360}, 80%, 55%)`;
-            wctx.fillRect(x+dx, y+dy, 15, 15);
-        }
-    }
+/* --- Рендер --- */
+function render(now) {
+    now *= 0.001;
+    const dt = now - then;
+    then = now;
 
-    t += 0.8;
-    requestAnimationFrame(drawWaves);
+    gl.uniform1f(timeUL, now * 1.5);
+    gl.uniform2f(resUL, canvas.width, canvas.height);
+
+    gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+    requestAnimationFrame(render);
 }
-drawWaves();
+render(0);
 
-/* ---------- ДЫМ / ТУМАН ---------- */
-const sctx = smoke.getContext("2d");
-let p = 0;
-
-function drawSmoke() {
-    sctx.clearRect(0,0,smoke.width,smoke.height);
-
-    for (let i = 0; i < 200; i++) {
-        let x = Math.sin(i*0.5 + p*0.02) * 300 + smoke.width/2;
-        let y = Math.cos(i*0.3 + p*0.015) * 250 + smoke.height/2;
-
-        sctx.fillStyle = `hsla(${(i*5 + p)%360}, 90%, 65%, 0.1)`;
-        sctx.beginPath();
-        sctx.arc(x, y, 120, 0, Math.PI*2);
-        sctx.fill();
-    }
-
-    p += 1;
-    requestAnimationFrame(drawSmoke);
-}
-drawSmoke();
-
-/* ---------- ИСКАЖЕНИЕ ПРИ СКРОЛЛЕ ---------- */
+/* --- Скролл-искажение --- */
 window.addEventListener("scroll", () => {
-    let sc = window.scrollY * 0.02;
-    waves.style.transform = `scale(1.05) translateY(${sc}px)`;
-    smoke.style.transform = `scale(1.1) translateY(${sc*1.5}px)`;
+    let s = window.scrollY * 0.015;
+    canvas.style.transform = `scale(1.05) translateY(${s}px)`;
 });
 </script>
 
