--- a/index.html
+++ b/index.html
@@ -1,169 +1,145 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Увертюра Иордан — Кислотный Трип</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Orbitron:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Увертюра Иордан</title>
+<link rel="stylesheet" href="style.css">
+<style>
+/* Встроенные основные стили для плавности и glitch */
+* {margin:0;padding:0;box-sizing:border-box;font-family:'Arial',sans-serif;}
+body, html {width:100%;height:100%;overflow-x:hidden;}
+canvas#bgCanvas {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-3;}
+#smokeCanvas {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-2;pointer-events:none;}
+section {position:relative;width:100%;}
+.home {min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;color:white;text-align:center;overflow:hidden;}
+.home h1 {font-size:5vw;text-transform:uppercase;text-shadow:0 0 20px #fff, 0 0 40px #f0f, 0 0 80px #0ff;}
+.menu {margin-top:30px;display:flex;gap:40px;flex-wrap:wrap;}
+.menu a {color:white;text-decoration:none;font-size:2vw;transition:0.3s;position:relative;}
+.menu a::after {content:'';position:absolute;left:0;bottom:-5px;width:100%;height:2px;background:#fff;transform:scaleX(0);transition:transform 0.3s ease;}
+.menu a:hover::after {transform:scaleX(1);}
+.menu a:hover {color:#ff0;animation:glitch 0.5s infinite;}
+@keyframes glitch {
+  0%{text-shadow:2px 0 #f0f, -2px 0 #0ff;}
+  20%{text-shadow:-2px 0 #f0f, 2px 0 #0ff;}
+  40%{text-shadow:2px 0 #0ff, -2px 0 #f0f;}
+  60%{text-shadow:-2px 0 #0ff, 2px 0 #f0f;}
+  80%{text-shadow:2px 0 #f0f, -2px 0 #0ff;}
+  100%{text-shadow:0 0 #fff;}
+}
+/* Секции контента */
+.content-section {padding:100px 5%;min-height:80vh;color:white;z-index:1;position:relative;}
+.album-grid {display:flex;flex-wrap:wrap;gap:30px;justify-content:center;}
+.album-card {width:250px;background:rgba(0,0,0,0.3);border-radius:20px;padding:20px;text-align:center;backdrop-filter:blur(5px);transition:transform 0.3s;}
+.album-card:hover {transform:scale(1.1);}
+.album-card img {width:100%;border-radius:15px;margin-bottom:15px;}
+.album-card h3 {margin-bottom:10px;}
+</style>
 </head>
 <body>
 
-<!-- WebGL фоновый канвас -->
-<canvas id="acid"></canvas>
+<!-- Canvas для трипа -->
+<canvas id="bgCanvas"></canvas>
+<canvas id="smokeCanvas"></canvas>
 
-<!-- Легкий дым -->
-<div class="smoke-layer"></div>
-
-<!-- Навигация -->
-<nav id="nav">
-    <ul>
-        <li><a href="#home">Главная</a></li>
-        <li><a href="#albums">Альбомы</a></li>
-        <li><a href="#gallery">Галерея</a></li>
-    </ul>
-</nav>
-
-<!-- Главная секция -->
-<section id="home" class="section home">
-    <h1 class="title glitch">Увертюра Иордан</h1>
-    <p class="tag">Психоделический рок / регги</p>
-
-    <button class="enter" onclick="document.getElementById('albums').scrollIntoView({behavior:'smooth'})">
-        Войти в Трип
-    </button>
+<!-- Главный экран -->
+<section class="home">
+  <h1>Увертюра Иордан</h1>
+  <div class="menu">
+    <a href="#albums">Альбомы</a>
+    <a href="#gallery">Галерея</a>
+    <a href="#about">О группе</a>
+  </div>
 </section>
 
 <!-- Альбомы -->
-<section id="albums" class="section">
-    <h2 class="sec-title">Альбомы</h2>
-
-    <div class="album-grid">
-        <div class="album-card">
-            <img src="albums/album1.jpg">
-            <h3>ПсихоСфера</h3>
-            <audio controls>
-                <source src="albums/album1/track1.mp3">
-            </audio>
-        </div>
-
-        <div class="album-card">
-            <img src="albums/album2.jpg">
-            <h3>РеггиГалактика</h3>
-            <audio controls>
-                <source src="albums/album2/track1.mp3">
-            </audio>
-        </div>
+<section id="albums" class="content-section">
+  <h2>Альбомы</h2>
+  <div class="album-grid">
+    <div class="album-card">
+      <img src="albums/album1.jpg" alt="Album 1">
+      <h3>Психоделика I</h3>
+      <audio controls>
+        <source src="albums/album1_track1.mp3" type="audio/mpeg">
+      </audio>
     </div>
+    <div class="album-card">
+      <img src="albums/album2.jpg" alt="Album 2">
+      <h3>Психоделика II</h3>
+      <audio controls>
+        <source src="albums/album2_track1.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+  </div>
 </section>
 
 <!-- Галерея -->
-<section id="gallery" class="section">
-    <h2 class="sec-title">Галерея</h2>
-
-    <div class="gallery-grid">
-        <img src="gallery/img1.jpg" class="gal-img">
-        <img src="gallery/img2.jpg" class="gal-img">
-        <img src="gallery/img3.jpg" class="gal-img">
-    </div>
+<section id="gallery" class="content-section">
+  <h2>Галерея</h2>
+  <div class="album-grid">
+    <img src="gallery/img1.jpg" alt="Art 1" style="width:300px;border-radius:15px;">
+    <img src="gallery/img2.jpg" alt="Art 2" style="width:300px;border-radius:15px;">
+  </div>
 </section>
 
-<!-- 🔥 КИСЛОТНЫЙ WEBGL — ВСТРОЕН В HTML -->
+<!-- Скрипт для WebGL трипа и дыма -->
 <script>
-const canvas = document.getElementById("acid");
-const gl = canvas.getContext("webgl");
-let then = 0;
+// Минималистичный псевдо-трип эффект на canvas
+const canvas = document.getElementById('bgCanvas');
+const ctx = canvas.getContext('2d');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 
-function resize() {
-    canvas.width = document.documentElement.scrollWidth;
-    canvas.height = document.documentElement.scrollHeight;
-    gl.viewport(0, 0, canvas.width, canvas.height);
+let t=0;
+function draw() {
+  ctx.fillStyle='rgba(0,0,0,0.05)';
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+  for(let i=0;i<150;i++){
+    let x=Math.sin(t*0.01+i)*canvas.width*0.5+canvas.width/2;
+    let y=Math.cos(t*0.01+i)*canvas.height*0.5+canvas.height/2;
+    let r=(Math.sin(t*0.02+i)+1)*3;
+    let col=`hsl(${(t+i*10)%360},100%,50%)`;
+    ctx.beginPath();
+    ctx.arc(x,y,r,0,Math.PI*2);
+    ctx.fillStyle=col;
+    ctx.fill();
+  }
+  t++;
+  requestAnimationFrame(draw);
 }
-resize();
-window.addEventListener("resize", resize);
+draw();
 
-/* --- Шейдеры (WebGL Acid Plasma) --- */
-const vertex = `
-attribute vec2 position;
-void main() {
-    gl_Position = vec4(position, 0.0, 1.0);
-}`;
-    
-const fragment = `
-precision highp float;
-uniform float time;
-uniform vec2 resolution;
+// Простая имитация дыма
+const smokeCanvas = document.getElementById('smokeCanvas');
+const sctx = smokeCanvas.getContext('2d');
+smokeCanvas.width = window.innerWidth;
+smokeCanvas.height = window.innerHeight;
 
-void main() {
-    vec2 uv = gl_FragCoord.xy / resolution.xy;
-    uv -= 0.5;
-    uv.x *= resolution.x/resolution.y;
-
-    float r = length(uv);
-    float a = atan(uv.y, uv.x);
-
-    float f = sin(a*3.0 + time*0.7)
-            + cos(r*12.0 - time*1.5)
-            + sin((uv.x+uv.y)*10.0 - time*1.2);
-
-    float c = sin(f + time*0.5);
-
-    gl_FragColor = vec4(
-        0.6 + 0.4*sin(c*3.0 + time),
-        0.6 + 0.4*sin(c*5.0 + time*0.5),
-        0.6 + 0.4*sin(c*7.0 + time*2.0),
-        1.0);
-}`;
-
-/* --- Компиляция --- */
-function compile(type, src) {
-    const s = gl.createShader(type);
-    gl.shaderSource(s, src);
-    gl.compileShader(s);
-    return s;
+let smokeParticles = [];
+for(let i=0;i<80;i++){
+  smokeParticles.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, r:20+Math.random()*40, speed:0.2+Math.random()*0.3});
 }
 
-const vs = compile(gl.VERTEX_SHADER, vertex);
-const fs = compile(gl.FRAGMENT_SHADER, fragment);
-const prog = gl.createProgram();
-
-gl.attachShader(prog, vs);
-gl.attachShader(prog, fs);
-gl.linkProgram(prog);
-gl.useProgram(prog);
-
-const buf = gl.createBuffer();
-gl.bindBuffer(gl.ARRAY_BUFFER, buf);
-gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-    -1,-1, 1,-1, -1,1, 1,1
-]), gl.STATIC_DRAW);
-
-const pos = gl.getAttribLocation(prog, "position");
-gl.enableVertexAttribArray(pos);
-gl.vertexAttribPointer(pos, 2, gl.FLOAT, false, 0, 0);
-
-const timeUL = gl.getUniformLocation(prog, "time");
-const resUL = gl.getUniformLocation(prog, "resolution");
-
-/* --- Рендер --- */
-function render(now) {
-    now *= 0.001;
-    const dt = now - then;
-    then = now;
-
-    gl.uniform1f(timeUL, now * 1.5);
-    gl.uniform2f(resUL, canvas.width, canvas.height);
-
-    gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-    requestAnimationFrame(render);
+function drawSmoke(){
+  sctx.clearRect(0,0,smokeCanvas.width,smokeCanvas.height);
+  smokeParticles.forEach(p=>{
+    p.y -= p.speed;
+    if(p.y < -p.r) p.y = smokeCanvas.height + p.r;
+    sctx.beginPath();
+    sctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+    sctx.fillStyle='rgba(200,200,255,0.04)';
+    sctx.fill();
+  });
+  requestAnimationFrame(drawSmoke);
 }
-render(0);
+drawSmoke();
 
-/* --- Скролл-искажение --- */
-window.addEventListener("scroll", () => {
-    let s = window.scrollY * 0.015;
-    canvas.style.transform = `scale(1.05) translateY(${s}px)`;
+// Подстройка размеров при ресайзе
+window.addEventListener('resize',()=>{
+  canvas.width=window.innerWidth;
+  canvas.height=window.innerHeight;
+  smokeCanvas.width=window.innerWidth;
+  smokeCanvas.height=window.innerHeight;
 });
 </script>
 
