--- a/index.html
+++ b/index.html
@@ -4,21 +4,56 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Увертюра Иордан</title>
-<link rel="stylesheet" href="style.css">
 <style>
-/* Встроенные основные стили для плавности и glitch */
-* {margin:0;padding:0;box-sizing:border-box;font-family:'Arial',sans-serif;}
-body, html {width:100%;height:100%;overflow-x:hidden;}
-canvas#bgCanvas {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-3;}
-#smokeCanvas {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-2;pointer-events:none;}
-section {position:relative;width:100%;}
-.home {min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;color:white;text-align:center;overflow:hidden;}
-.home h1 {font-size:5vw;text-transform:uppercase;text-shadow:0 0 20px #fff, 0 0 40px #f0f, 0 0 80px #0ff;}
-.menu {margin-top:30px;display:flex;gap:40px;flex-wrap:wrap;}
-.menu a {color:white;text-decoration:none;font-size:2vw;transition:0.3s;position:relative;}
-.menu a::after {content:'';position:absolute;left:0;bottom:-5px;width:100%;height:2px;background:#fff;transform:scaleX(0);transition:transform 0.3s ease;}
+/* Сброс стилей */
+* {margin:0; padding:0; box-sizing:border-box; font-family: 'Arial', sans-serif;}
+body, html {width:100%; height:100%; overflow-x:hidden;}
+
+/* Основной кислотный фон */
+canvas#tripCanvas {position:fixed; top:0; left:0; width:100%; height:100%; z-index:-3;}
+canvas#smokeCanvas {position:fixed; top:0; left:0; width:100%; height:100%; z-index:-2; pointer-events:none;}
+
+/* Главный экран */
+.home {
+    min-height:100vh;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    color:white;
+    position:relative;
+    z-index:1;
+}
+.home h1 {
+    font-size:6vw;
+    text-transform:uppercase;
+    text-shadow:0 0 20px #fff,0 0 40px #f0f,0 0 80px #0ff;
+    margin-bottom:30px;
+}
+.menu {
+    display:flex;
+    gap:50px;
+    flex-wrap:wrap;
+}
+.menu a {
+    color:white;
+    text-decoration:none;
+    font-size:2vw;
+    position:relative;
+    transition:0.3s;
+}
+.menu a::after {
+    content:'';
+    position:absolute;
+    left:0; bottom:-5px;
+    width:100%; height:2px;
+    background:#fff;
+    transform:scaleX(0);
+    transition:transform 0.3s;
+}
 .menu a:hover::after {transform:scaleX(1);}
-.menu a:hover {color:#ff0;animation:glitch 0.5s infinite;}
+.menu a:hover {animation:glitch 0.5s infinite;}
 @keyframes glitch {
   0%{text-shadow:2px 0 #f0f, -2px 0 #0ff;}
   20%{text-shadow:-2px 0 #f0f, 2px 0 #0ff;}
@@ -27,19 +62,52 @@ section {position:relative;width:100%;}
   80%{text-shadow:2px 0 #f0f, -2px 0 #0ff;}
   100%{text-shadow:0 0 #fff;}
 }
-/* Секции контента */
-.content-section {padding:100px 5%;min-height:80vh;color:white;z-index:1;position:relative;}
-.album-grid {display:flex;flex-wrap:wrap;gap:30px;justify-content:center;}
-.album-card {width:250px;background:rgba(0,0,0,0.3);border-radius:20px;padding:20px;text-align:center;backdrop-filter:blur(5px);transition:transform 0.3s;}
+
+/* Контентные секции */
+.content-section {padding:80px 5%; min-height:80vh; color:white; position:relative; z-index:1;}
+.content-section h2 {font-size:3vw; text-align:center; margin-bottom:40px; text-shadow:0 0 15px #fff,0 0 30px #f0f,0 0 60px #0ff;}
+
+/* Альбомы */
+.album-grid {display:flex; flex-wrap:wrap; justify-content:center; gap:40px;}
+.album-card {
+    width:280px;
+    background:rgba(0,0,0,0.35);
+    border-radius:25px;
+    padding:25px;
+    text-align:center;
+    backdrop-filter:blur(8px);
+    transition:transform 0.35s;
+}
 .album-card:hover {transform:scale(1.1);}
-.album-card img {width:100%;border-radius:15px;margin-bottom:15px;}
-.album-card h3 {margin-bottom:10px;}
+.album-card img {width:100%; border-radius:20px; margin-bottom:15px;}
+.album-card h3 {margin-bottom:15px; font-size:1.3em; color:#fff;}
+audio {width:100%; outline:none; margin-top:10px;}
+
+/* Галерея */
+#gallery img {
+    width:300px;
+    border-radius:15px;
+    transition: transform 0.3s;
+}
+#gallery img:hover {transform:scale(1.05) rotate(2deg);}
+
+/* Плавная анимация градиента всего сайта */
+body {
+    background: linear-gradient(45deg, #ff0, #f0f, #0ff, #0f0, #f00, #0f0, #ff0);
+    background-size: 400% 400%;
+    animation: gradientShift 20s ease infinite;
+}
+@keyframes gradientShift {
+    0%{background-position:0% 50%;}
+    50%{background-position:100% 50%;}
+    100%{background-position:0% 50%;}
+}
 </style>
 </head>
 <body>
 
-<!-- Canvas для трипа -->
-<canvas id="bgCanvas"></canvas>
+<!-- Canvas для кислотного трипа -->
+<canvas id="tripCanvas"></canvas>
 <canvas id="smokeCanvas"></canvas>
 
 <!-- Главный экран -->
@@ -77,69 +145,81 @@ section {position:relative;width:100%;}
 <section id="gallery" class="content-section">
   <h2>Галерея</h2>
   <div class="album-grid">
-    <img src="gallery/img1.jpg" alt="Art 1" style="width:300px;border-radius:15px;">
-    <img src="gallery/img2.jpg" alt="Art 2" style="width:300px;border-radius:15px;">
+    <img src="gallery/img1.jpg" alt="Art 1">
+    <img src="gallery/img2.jpg" alt="Art 2">
   </div>
 </section>
 
-<!-- Скрипт для WebGL трипа и дыма -->
+<!-- Скрипт для трипа и дыма -->
 <script>
-// Минималистичный псевдо-трип эффект на canvas
-const canvas = document.getElementById('bgCanvas');
+// ===== Кислотный фон: точки и линии =====
+const canvas = document.getElementById('tripCanvas');
 const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-let t=0;
-function draw() {
-  ctx.fillStyle='rgba(0,0,0,0.05)';
-  ctx.fillRect(0,0,canvas.width,canvas.height);
-  for(let i=0;i<150;i++){
-    let x=Math.sin(t*0.01+i)*canvas.width*0.5+canvas.width/2;
-    let y=Math.cos(t*0.01+i)*canvas.height*0.5+canvas.height/2;
-    let r=(Math.sin(t*0.02+i)+1)*3;
-    let col=`hsl(${(t+i*10)%360},100%,50%)`;
-    ctx.beginPath();
-    ctx.arc(x,y,r,0,Math.PI*2);
-    ctx.fillStyle=col;
-    ctx.fill();
-  }
-  t++;
-  requestAnimationFrame(draw);
+let particles = [];
+for(let i=0;i<300;i++){
+    particles.push({
+        x: Math.random()*canvas.width,
+        y: Math.random()*canvas.height,
+        vx: (Math.random()-0.5)*2,
+        vy: (Math.random()-0.5)*2,
+        r: Math.random()*3+1,
+        color: `hsl(${Math.random()*360},100%,50%)`
+    });
 }
-draw();
 
-// Простая имитация дыма
+function drawTrip(){
+    ctx.fillStyle='rgba(0,0,0,0.05)';
+    ctx.fillRect(0,0,canvas.width,canvas.height);
+    particles.forEach(p=>{
+        p.x+=p.vx;
+        p.y+=p.vy;
+        if(p.x<0)p.x=canvas.width;
+        if(p.x>canvas.width)p.x=0;
+        if(p.y<0)p.y=canvas.height;
+        if(p.y>canvas.height)p.y=0;
+        ctx.beginPath();
+        ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+        ctx.fillStyle=p.color;
+        ctx.fill();
+    });
+    requestAnimationFrame(drawTrip);
+}
+drawTrip();
+
+// ===== Дымный фон =====
 const smokeCanvas = document.getElementById('smokeCanvas');
 const sctx = smokeCanvas.getContext('2d');
 smokeCanvas.width = window.innerWidth;
 smokeCanvas.height = window.innerHeight;
 
 let smokeParticles = [];
-for(let i=0;i<80;i++){
-  smokeParticles.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, r:20+Math.random()*40, speed:0.2+Math.random()*0.3});
+for(let i=0;i<100;i++){
+    smokeParticles.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, r:20+Math.random()*50, speed:0.2+Math.random()*0.4});
 }
 
 function drawSmoke(){
-  sctx.clearRect(0,0,smokeCanvas.width,smokeCanvas.height);
-  smokeParticles.forEach(p=>{
-    p.y -= p.speed;
-    if(p.y < -p.r) p.y = smokeCanvas.height + p.r;
-    sctx.beginPath();
-    sctx.arc(p.x,p.y,p.r,0,Math.PI*2);
-    sctx.fillStyle='rgba(200,200,255,0.04)';
-    sctx.fill();
-  });
-  requestAnimationFrame(drawSmoke);
+    sctx.clearRect(0,0,smokeCanvas.width,smokeCanvas.height);
+    smokeParticles.forEach(p=>{
+        p.y -= p.speed;
+        if(p.y < -p.r) p.y = smokeCanvas.height + p.r;
+        sctx.beginPath();
+        sctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+        sctx.fillStyle='rgba(200,200,255,0.03)';
+        sctx.fill();
+    });
+    requestAnimationFrame(drawSmoke);
 }
 drawSmoke();
 
-// Подстройка размеров при ресайзе
+// ===== Подстройка под ресайз =====
 window.addEventListener('resize',()=>{
-  canvas.width=window.innerWidth;
-  canvas.height=window.innerHeight;
-  smokeCanvas.width=window.innerWidth;
-  smokeCanvas.height=window.innerHeight;
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    smokeCanvas.width = window.innerWidth;
+    smokeCanvas.height = window.innerHeight;
 });
 </script>
 
