--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Увертюра Иордан — Абсолютный трип</title>
+<title>Увертюра Иордан — Психоделический хаос</title>
 <style>
 * {margin:0; padding:0; box-sizing:border-box; font-family:'Arial',sans-serif;}
-html, body {width:100%; height:100%; overflow-x:hidden; scroll-behavior:smooth; background:black;}
+html, body {width:100%; height:100%; overflow-x:hidden; scroll-behavior:smooth; background:black; color:white;}
 
-/* CANVAS для визуальных эффектов */
 canvas {position:fixed; top:0; left:0; width:100%; height:100%; z-index:-10; pointer-events:none;}
 
-/* Текучий градиент */
 body {
   background: linear-gradient(45deg, #ff0, #f0f, #0ff, #0f0, #f00, #0f0, #ff0);
   background-size: 400% 400%;
-  animation:gradientShift 20s ease infinite;
+  animation:gradientShift 25s ease infinite;
 }
 @keyframes gradientShift{
   0%{background-position:0% 50%;}
@@ -23,30 +21,17 @@ body {
   100%{background-position:0% 50%;}
 }
 
-/* Главная секция */
-.home {min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; color:white; perspective:1200px; position:relative;}
-.home h1 {font-size:8vw; text-shadow:0 0 20px #fff,0 0 50px #f0f,0 0 100px #0ff; margin-bottom:30px; animation:glitchText 2s infinite;}
-@keyframes glitchText{0%{transform:skew(0deg,0deg);}25%{transform:skew(10deg,-10deg);}50%{transform:skew(-10deg,10deg);}75%{transform:skew(15deg,-15deg);}100%{transform:skew(0deg,0deg);}}
+.home {min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; perspective:1200px; position:relative; z-index:1;}
+.home h1 {font-size:8vw; text-shadow:0 0 20px #fff,0 0 50px #f0f,0 0 100px #0ff; margin-bottom:30px; cursor:default;}
 
 .menu {display:flex; gap:50px; flex-wrap:wrap; margin-top:30px;}
 .menu a {color:white; text-decoration:none; font-size:2.5vw; position:relative; display:inline-block; transition:0.3s;}
 .menu a::after {content:''; position:absolute; left:0; bottom:-5px; width:100%; height:3px; background:#fff; transform:scaleX(0); transition:transform 0.3s;}
 .menu a:hover::after {transform:scaleX(1);}
-.menu a:hover {animation:glitch 0.5s infinite;}
-@keyframes glitch{
-  0%{text-shadow:2px 0 #f0f, -2px 0 #0ff;}
-  20%{text-shadow:-2px 0 #f0f, 2px 0 #0ff;}
-  40%{text-shadow:2px 0 #0ff, -2px 0 #f0f;}
-  60%{text-shadow:-2px 0 #0ff, 2px 0 #f0f;}
-  80%{text-shadow:2px 0 #f0f, -2px 0 #0ff;}
-  100%{text-shadow:0 0 #fff;}
-}
 
-/* Секции */
-.content-section {padding:80px 5%; min-height:80vh; color:white; perspective:500px; position:relative; z-index:1;}
-.content-section h2 {font-size:3vw; text-align:center; margin-bottom:40px; text-shadow:0 0 15px #fff,0 0 30px #f0f,0 0 60px #0ff; animation:glitchText 3s infinite;}
+.content-section {padding:80px 5%; min-height:80vh; perspective:500px; position:relative; z-index:1;}
+.content-section h2 {font-size:3vw; text-align:center; margin-bottom:40px; text-shadow:0 0 15px #fff,0 0 30px #f0f,0 0 60px #0ff;}
 
-/* Альбомы */
 .album-grid {display:flex; flex-wrap:wrap; justify-content:center; gap:40px;}
 .album-card {
   width:300px; background:rgba(0,0,0,0.25); border-radius:25px; padding:25px; text-align:center; backdrop-filter:blur(12px);
@@ -56,18 +41,10 @@ body {
 .album-card img {width:100%; border-radius:20px; margin-bottom:15px;}
 .album-card h3 {margin-bottom:15px; font-size:1.3em; color:#fff;}
 
-/* Галерея */
 #gallery img {width:350px; border-radius:20px; transition:transform 0.5s, filter 0.5s; cursor:pointer;}
 #gallery img:hover {transform:scale(1.8) rotate(20deg) skew(-25deg,25deg); filter:hue-rotate(300deg) brightness(2) blur(1px);}
 
-/* Глитч текст */
-.glitch-text {position:relative; display:inline-block; color:white; font-weight:bold; font-size:2.5vw; animation:glitchMove 3s infinite;}
-.glitch-text::before, .glitch-text::after {content:attr(data-text); position:absolute; left:0; top:0; color:white; mix-blend-mode:screen;}
-.glitch-text::before { animation:glitchBefore 2s infinite; }
-.glitch-text::after { animation:glitchAfter 2s infinite; }
-@keyframes glitchMove{0%{transform:translate(0);}50%{transform:translate(-5px,3px);}100%{transform:translate(0);}}
-@keyframes glitchBefore{0%{transform:translate(-2px,-2px);}50%{transform:translate(2px,2px);}100%{transform:translate(-2px,-2px);}}
-@keyframes glitchAfter{0%{transform:translate(2px,2px);}50%{transform:translate(-2px,-2px);}100%{transform:translate(2px,2px);}}
+.glitch-letter {display:inline-block; position:relative; color:white; transition:all 0.1s ease;}
 </style>
 </head>
 <body>
@@ -78,7 +55,7 @@ body {
 <canvas id="waveCanvas"></canvas>
 
 <section class="home">
-  <h1 class="glitch-text" data-text="Увертюра Иордан">Увертюра Иордан</h1>
+  <h1 id="title">Увертюра Иордан</h1>
   <div class="menu">
     <a href="#albums">Альбомы</a>
     <a href="#gallery">Галерея</a>
@@ -87,21 +64,21 @@ body {
 </section>
 
 <section id="albums" class="content-section">
-  <h2 class="glitch-text" data-text="Альбомы">Альбомы</h2>
+  <h2 id="albumsTitle">Альбомы</h2>
   <div class="album-grid">
     <div class="album-card">
       <img src="albums/album1.jpg" alt="Album 1">
-      <h3 class="glitch-text" data-text="Психоделика I">Психоделика I</h3>
+      <h3>Психоделика I</h3>
     </div>
     <div class="album-card">
       <img src="albums/album2.jpg" alt="Album 2">
-      <h3 class="glitch-text" data-text="Психоделика II">Психоделика II</h3>
+      <h3>Психоделика II</h3>
     </div>
   </div>
 </section>
 
 <section id="gallery" class="content-section">
-  <h2 class="glitch-text" data-text="Галерея">Галерея</h2>
+  <h2 id="galleryTitle">Галерея</h2>
   <div class="album-grid">
     <img src="gallery/img1.jpg" alt="Art 1">
     <img src="gallery/img2.jpg" alt="Art 2">
@@ -110,20 +87,27 @@ body {
 </section>
 
 <script>
-// ===== Trip Particles =====
-const canvas = document.getElementById('tripCanvas');
-const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth; canvas.height = window.innerHeight;
-let particles = [];
-for(let i=0;i<1000;i++){
-    particles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,vx:(Math.random()-0.5)*5,vy:(Math.random()-0.5)*5,r:Math.random()*3+1,color:`hsl(${Math.random()*360},100%,50%)`});
+// ===== Обёртка текста в отдельные буквы =====
+function wrapLetters(id){
+  const el=document.getElementById(id);
+  const text=el.innerText;
+  el.innerHTML='';
+  text.split('').forEach(c=>{
+    const span=document.createElement('span');
+    span.classList.add('glitch-letter');
+    span.innerText=c===' ' ? '\u00A0' : c;
+    el.appendChild(span);
+  });
 }
+['title','albumsTitle','galleryTitle'].forEach(wrapLetters);
+
+// ===== Trip Particles =====
+const canvas=document.getElementById('tripCanvas');const ctx=canvas.getContext('2d');canvas.width=window.innerWidth;canvas.height=window.innerHeight;let particles=[];for(let i=0;i<1000;i++){particles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,vx:(Math.random()-0.5)*5,vy:(Math.random()-0.5)*5,r:Math.random()*3+1,color:`hsl(${Math.random()*360},100%,50%)`});}
 function drawTrip(){ctx.fillStyle='rgba(0,0,0,0.07)';ctx.fillRect(0,0,canvas.width,canvas.height);particles.forEach(p=>{p.x+=p.vx;p.y+=p.vy;if(p.x<0)p.x=canvas.width;if(p.x>canvas.width)p.x=0;if(p.y<0)p.y=canvas.height;if(p.y>canvas.height)p.y=0;ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fillStyle=p.color;ctx.fill();});requestAnimationFrame(drawTrip);}
 drawTrip();
 
 // ===== Smoke =====
-const smokeCanvas=document.getElementById('smokeCanvas');const sctx=smokeCanvas.getContext('2d');smokeCanvas.width=window.innerWidth;smokeCanvas.height=window.innerHeight;
-let smokeParticles=[];for(let i=0;i<300;i++){smokeParticles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:30+Math.random()*70,speed:0.2+Math.random()*0.6});}
+const smokeCanvas=document.getElementById('smokeCanvas');const sctx=smokeCanvas.getContext('2d');smokeCanvas.width=window.innerWidth;smokeCanvas.height=window.innerHeight;let smokeParticles=[];for(let i=0;i<300;i++){smokeParticles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:30+Math.random()*70,speed:0.2+Math.random()*0.6});}
 function drawSmoke(){sctx.clearRect(0,0,smokeCanvas.width,smokeCanvas.height);smokeParticles.forEach(p=>{p.y-=p.speed;if(p.y<-p.r)p.y=smokeCanvas.height+p.r;sctx.beginPath();sctx.arc(p.x,p.y,p.r,0,Math.PI*2);sctx.fillStyle='rgba(255,200,255,0.03)';sctx.fill();});requestAnimationFrame(drawSmoke);}
 drawSmoke();
 
@@ -134,16 +118,39 @@ function drawBursts(){bctx.clearRect(0,0,burstCanvas.width,burstCanvas.height);b
 drawBursts();
 
 // ===== Wave background =====
-const waveCanvas=document.getElementById('waveCanvas');const wctx=waveCanvas.getContext('2d');waveCanvas.width=window.innerWidth;waveCanvas.height=window.innerHeight;
-let t=0;
+const waveCanvas=document.getElementById('waveCanvas');const wctx=waveCanvas.getContext('2d');waveCanvas.width=window.innerWidth;waveCanvas.height=window.innerHeight;let t=0;
 function drawWaves(){wctx.clearRect(0,0,waveCanvas.width,waveCanvas.height);for(let i=0;i<waveCanvas.height;i+=6){wctx.strokeStyle=`hsla(${(i+t)%360},100%,50%,0.15)`;wctx.beginPath();for(let x=0;x<waveCanvas.width;x+=10){let y=i+Math.sin(x/40+t/20)*20;wctx.lineTo(x,y);} wctx.stroke();} t+=1; requestAnimationFrame(drawWaves);}
 drawWaves();
 
-// ===== Scroll distort =====
-window.addEventListener('scroll',()=>{const scroll=window.scrollY;document.querySelectorAll('.album-card,#gallery img').forEach(el=>{el.style.transform=`translateY(${Math.sin(scroll/30)*25}px) rotate(${Math.sin(scroll/50)*20}deg) skew(${Math.sin(scroll/40)*20}deg,${Math.sin(scroll/60)*20}deg)`;el.style.filter=`hue-rotate(${scroll%360}deg)`;});});
+// ===== Scroll distort text & letters =====
+window.addEventListener('scroll',()=>{
+  const scroll=window.scrollY;
+  // Главный заголовок
+  document.querySelectorAll('.glitch-letter').forEach((el,i)=>{
+    const angle=Math.sin(scroll/50+i/2)*30;
+    const sx=Math.sin(scroll/60+i)*0.5+1;
+    const sy=Math.cos(scroll/50+i/3)*0.5+1;
+    el.style.transform=`rotate(${angle}deg) scale(${sx},${sy})`;
+    el.style.color=`hsl(${(scroll+i*10)%360},100%,75%)`;
+    el.style.textShadow=`0 0 2px hsl(${(scroll+i*15)%360},100%,50%), 0 0 5px hsl(${(scroll+i*20)%360},100%,60%)`;
+  });
+
+  // Меню
+  document.querySelectorAll('.menu a').forEach(el=>{
+    el.style.transform=`rotate(${Math.sin(scroll/30)*15}deg) skew(${Math.sin(scroll/40)*25}deg,${Math.sin(scroll/50)*25}deg) scale(${1+Math.sin(scroll/80)*0.2})`;
+    el.style.filter=`hue-rotate(${scroll*2%360}deg)`;
+  });
+
+  // Альбомы и галерея
+  document.querySelectorAll('.album-card,#gallery img').forEach(el=>{
+    el.style.transform=`translateY(${Math.sin(scroll/30)*25}px) rotate(${Math.sin(scroll/50)*20}deg) skew(${Math.sin(scroll/40)*20}deg,${Math.sin(scroll/60)*20}deg) scale(${1+Math.sin(scroll/70)*0.2})`;
+    el.style.filter=`hue-rotate(${scroll%360}deg)`;
+  });
+});
 
 // ===== Resize =====
 window.addEventListener('resize',()=>{canvas.width=waveCanvas.width=smokeCanvas.width=burstCanvas.width=window.innerWidth;canvas.height=waveCanvas.height=smokeCanvas.height=burstCanvas.height=window.innerHeight;});
 </script>
+
 </body>
 </html>
